[package]
name = "baker_layer_pb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baker_ir_pb = { path = "../baker_ir_pb" }
baker_pkg_pb = { path = "../baker_pkg_pb" }
prost = "0.8"

[build-dependencies]
prost-build = "0.8"
