[package]
name = "blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
async-trait = "0.1"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
serde = { version = "1.0.130", features = ["derive"] }
